--- a/index.html
+++ b/index.html
@@ -6,50 +6,57 @@
     <title>Folio</title>
 </head>
 <body>
-    <header> <!-- shadow -->
-        <section>
+    <header> 
+        <section> <!--  fixed top  -->
             <article class="top">
-                <div class="firstLine" >
+                <div class="topLine" >
                     <p>SC20"</p>
                     <p>TEMPORARY FOLIO</p>
                 </div>
-            </article>
-                <div class="headline">
-                    <h1>TEMPORARY <span class="before">FOLIO – &copy; </span></h1>
-                </div>
+            </article> <!--  main headline  -->
+            <div class="headline">
+                <h1>TEMPORARY <hr> FOLIO – &copy;<hr> </h1>
+            </div>
+            <article class="mainImg"> <!--main img + txt-->
                 <div class="img">
                     <img src="./assets/img/blue.jpeg" alt="man standing">
-                    <p class="text1">DESIGNER & DEVELOPER</p>
                 </div>
+                <div class="text1">
+                    <p>DESIGNER <span> & DEVELOPER</span> </p>
                 </div>
+            </article>
         </section>
     </header>
 
     <main>
         <section class="rosa">
-            <div class="info2">
-                <p class="page">.01</p>
-                <h2>RELEA<span class="before">SE</span></h2>
+            <div class="headline1"> 
+                <!--  page nr. + headline -->
+                <p class="pageNr">.01</p>
+                <h2>RELEASE</h2>
             </div>
-            <div class="secondLine">
-                <p>FIRST OF ALL, IT IS AMAZING HAVING YOU HERE, WELCOME! I'M A PERSON WHO'S COMPLETELY IN LOVE WITH DESIGN, I AM PASSIONATE ABOUT TECHNOLOGY AND INTERACTIVITY, THE TWO FIELDS WHICH I'D LOVE TO STAY MORE INVOLVED IN AND KEEP ABOUT. CONTINUE TO GROW AND IMPROVE EVERY DAY!</p>
-            </div>
-
+            <article class="general">
+                    <!-- general text -->
+                <div class="text2"> 
+                    <p>FIRST OF ALL, IT IS AMAZING HAVING YOU HERE, WELCOME! I'M A PERSON WHO'S COMPLETELY IN LOVE WITH DESIGN, I AM PASSIONATE ABOUT TECHNOLOGY AND INTERACTIVITY, THE TWO FIELDS WHICH I'D LOVE TO STAY MORE INVOLVED IN AND KEEP ABOUT. CONTINUE TO GROW AND IMPROVE EVERY DAY!</p>
+                </div>
+            </article>
+                <!--  tabelle  -->
             <article class="tabelle">
                 <div class="principle">
                     <p>PRINCIPLES & VALUES</p>
                 </div>
                 <div class="word">
-                    <p>01. Integrity.</p>
-                    <p>Always working with accuracy and transparency.</p>
+                    <p class="caption">01.<span>Integrity.</span> </p>
+                    <p class="comment">Always working with accuracy and transparency.</p>
                 </div>
                 <div class="word">
-                    <p>02. Understanding.</p>
-                    <p>Well-made website require effort and comprehension.</p>
+                    <p class="caption">02. <span>Understanding.</span></p>
+                    <p class="comment">Well-made website require effort and comprehension.</p>
                 </div>
                 <div class="word">
-                    <p>03. Performance.</p>
-                    <p>Focus is the key, every minute is important.</p>
+                    <p class="caption">03.<span>Performance.</span> </p>
+                    <p class="comment">Focus is the key, every minute is important.</p>
                 </div>
             </article>
             <div class="logo">
@@ -58,32 +65,31 @@
         </section>
 
         <section class="orangeBg">
-            <article class="">
                 <div class="headline2">
-                    <p class="page">.02</p>
+                    <p class="pageNr2">.02</p>
                     <h2>WORKS</h2>
                 </div>
-                <div class="info3">
-                    <p>EVERY WEBSITE IS MEANINGFUL AND REQUIRE A LOT OF EFFORT TO REACH THE GOALS, REAGARDLESS OF WHICH GOALS YOU ARE LOOKING TO MEET, I CAN WORK WITH YOU TO REACH THEM. BELOW YOU CAN SEE SOME OF THE PROJECTS I'VE WORKED IN AND SEE MY SKILLS SET. I HOPE YOU ENJOY THEM:</p>
-                </div>
+                <article class="general2">
+                    <div class="text3">
+                        <p>EVERY WEBSITE IS MEANINGFUL AND REQUIRE A LOT OF EFFORT TO REACH THE GOALS, REAGARDLESS OF WHICH GOALS YOU ARE LOOKING TO MEET, I CAN WORK WITH YOU TO REACH THEM. BELOW YOU CAN SEE SOME OF THE PROJECTS I'VE WORKED IN AND SEE MY SKILLS SET. I HOPE YOU ENJOY THEM:</p>
+                    </div>
+                </article>
 
-            </article>
-            
             <article class="input">
                 <div class="right">
-                    <p>RODRIGO <span class="before">MARCONATTO</span>  </p>
+                    <p>RODRIGO MARCONATTO</p>
                     <img class="imgR" src="./assets/img/bg-marconatto-1.jpg" alt="woman face">
                 </div>
                 <div class="left">
-                    <p>KÄTHE <span class="before">KOLLWITZ</span> </p>
+                    <p>KÄTHE KOLLWITZ</p>
                     <img class="imgL" src="./assets/img/kathe_cover-1.jpg" alt="wood figure">
                 </div>
                 <div class="right">
-                    <p>VICTOR FOLIO <span class="before">2019"</span></p>
+                    <p>VICTOR FOLIO 2019"</p>
                     <img class="imgR" src="./assets/img/bg-nicole-1.jpg" alt="woman on beach">
                 </div>
                 <div class="left">
-                    <p>BORED OF <span class="before">AUTHORITY</span></p>
+                    <p>BORED OF AUTHORITY</p>
                     <img class="imgL" src="./assets/img/boa_cover-1.jpg" alt="snowboarding">
                 </div>
             </article>
@@ -92,10 +98,12 @@
 
     <footer>
         <article class="info3">
-            <p class="page">.03</p>
-            <h3>CONTA <span class="before">CT</span></h3>
+            <div class="headline3">
+                <p class="pageNr">.03</p>
+                <h3>CONTACT</h3>
+            </div>
         </article>
-        <article class="text3">
+        <article class="text4">
             <p>NOW THAT YOU ALREADY KNOW ME, IT IS TIME TO START TO BUILD SOMETHING AMAZING TOGETHER.</p>
         </article>
         <nav>
